# pgwire-lite-rs

./: .gitignore  Cargo.toml  README.md  cargo.toml  cargo_publish.sh  start-secure-server.sh  start-server.sh
.github/workflows/: regression.yml
examples/: simple_query.rs  simple_query_with_mtls.rs
src/: connection.rs  lib.rs  main.rs  notices.rs  value.rs
test/robot/functional/: __init__.robot  stackql.resource  stackql_sessions.robot
tests/: integration.rs  integration_mtls.rs
tests/test_cases/: mod.rs
