[package]
name = "pgwire-lite"
version = "0.1.0"
edition = "2021"
description = "A library for connecting to a StackQL server using the PostgreSQL wire protocol"
license = "MIT"
authors = ["krimmer@stackql.io","javen@stackql.io"]
repository = "https://github.com/stackql/pgwire-lite-rs"
readme = "README.md"
keywords = ["stackql", "postgres", "pgwire", "database", "sql"]
categories = ["database", "api-bindings"]

[dependencies]
libpq = "4.1.0"
libpq-sys = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[dev-dependencies]
lazy_static = "1.4.0"
colorize = "0.1.0"

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"