[package]
name = "pgwire-lite"
version = "0.1.0"
edition = "2021"
description = "A library for connecting to a StackQL server using the PostgreSQL wire protocol"
license = "MIT"
authors = ["krimmer@stackql.io","javen@stackql.io"]
repository = "https://github.com/stackql/pgwire-lite-rs"
readme = "README.md"
keywords = ["stackql", "postgres", "pgwire", "database", "sql"]
categories = ["database", "api-bindings"]
include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
libpq = "4.1.0"
libpq-sys = "0.8.0"
log = "0.4"

[dev-dependencies]
lazy_static = "1.4.0"
colorize = "0.1.0"
env_logger = "0.10"

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]